--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,20 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@containers": ["containers"],
+      "@components": ["components"],
+      "@assets": ["assets"],
+      "@shared": ["shared"],
+      "@styles": ["styles"],
+      "@utils": ["utils"],
+      "@context": ["core/context"],
+      "@models": ["core/models"],
+      "@services": ["core/services"],
+      "@router": ["router"],
+      "@": [""]
+    },
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
