--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,19 +11,20 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "baseUrl": "./src",
+    "baseUrl": "./src/",
     "paths": {
-      "@containers": ["containers"],
-      "@components": ["components"],
-      "@assets": ["assets"],
-      "@shared": ["shared"],
-      "@styles": ["styles"],
-      "@utils": ["utils"],
-      "@context": ["core/context"],
-      "@models": ["core/models"],
-      "@services": ["core/services"],
-      "@router": ["router"],
-      "@": [""]
+      "@containers/*": ["containers/*"],
+      "@components/*": ["components/*"],
+      "@assets/*": ["assets/*"],
+      "@shared/*": ["shared/*"],
+      "@styles/*": ["styles/*"],
+      "@utils/*": ["utils/*"],
+      "@context/*": ["core/context/*"],
+      "@models/*": ["core/models/*"],
+      "@services/*": ["core/services/*"],
+      "@router/*": ["core/router/*"],
+      "@configuration/*": ["core/configuration/*"],
+      "@/*": ["/*"]
     },
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
