--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,20 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "baseUrl": "./src/",
+    "paths": {
+      "@containers/*": ["containers/*"],
+      "@components/*": ["components/*"],
+      "@assets/*": ["assets/*"],
+      "@shared/*": [ "shared/*"],
+      "@styles/*": ["styles/*"],
+      "@utils/*": ["utils/*"],
+      "@context/*": ["core/context/*"],
+      "@models/*": ["core/models/*"],
+      "@services/*": ["core/services/*"],
+      "@router/*": ["core/router/*"],
+      "@configuration/*": ["core/configuration/*"],
+      "@cache/*": ["core/cache/*"]
+    },
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
